# biased

./: CMakeLists.txt  README.md
data/shaders/: plain.glsl
src/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  Log.h  Position.h  Shader.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  SpriteRenderer.cpp  SpriteRenderer.h  TextureCache.cpp  TextureCache.h  WindowSystem.cpp  WindowSystem.h  main.cpp
